--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mywebsite",
-    "slug": "mywebsite",
+    "name": "MyWebSite",
+    "slug": "MyWebSite",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
